# python-ai

./: .gitignore  main.py  pyproject.toml
src/tcss/: layout.tcss
src/tui/: screen.py
src/tui/store/: timeline.py
src/tui/widgets/: bot_info.py  timeline.py
src/utils/tui/: storage.py
